I started to write the content

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <main>
         <header>
-            <h1>Website title</h1>
+            <h1>Free Courses</h1>
         </header>
         <article>
-            <h2>Article 001</h2>
-            <p>Text of Article 001</p>
+            <h2>HTML5 AND CSS3 Course</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, explicabo porro exercitationem commodi laudantium sit velit quaerat aut fuga sunt architecto consectetur aliquid facere itaque iusto suscipit molestias a perspiciatis.</p>
         </article>
         <article>
-            <h2>Article 002</h2>
-            <p>Text of Article 002</p>
+            <h2>JavaScript Course</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita saepe voluptatum placeat fugit tempora quia cumque repellat minus! Rem aliquam doloribus modi at hic omnis, consequuntur neque officia perferendis distinctio.</p>
         </article>
     </main>
 </body>
